# qiq

./: .gitignore
sbf/: nodes.toml  pyproject.toml  sbf.py  sbn.py
scripts/Docker/: Dockerfile.aktools  Dockerfile.jupyterlab  docker-compose-browser.yml  docker-compose-coder.yml  docker-compose-gpt_aca.yml  docker-compose-lucky.yml  docker-compose-maccms.yml  docker-compose-neko.yml  docker-compose-openrestymanager.yml  docker-compose-photopea-ramuses.yml  docker-compose-photopea.yml  docker-compose-splayer.yml  docker-fnos.yml  docker-mac.yml  docker-qemu.yml  docker-win-arm.yml  docker-win-core11.yml  docker-win.yml  docker-win2025.yml  docker-win7.yml
scripts/PopKart/: 00-quit.json  00-reset.json  00-yardKeyMap.json  01-pBless1.json  01-pBless2.json  01-pWater.json  02-aBless.json  02-aBless1.json  02-aFeed.json  02-aWater.json  03-Fish.json  03-toFish.json  10-bless.json  10-water.json  11-aBac.json  11-aFor.json  11-aLef.json  11-aRig.json  11-maHead.json  22-mHead.json  22-mTail.json  22-pBac.json  22-pFor.json  22-pLef.json  22-pRig.json  33-fHead.json  ReadMe.md  animalBefore.json  dig1.json  dig2.json  feed.json  fishAction.json  fishAhead.json  fishType.json  (+15 more)
src/: ac.js  ak.js  ak2.js  ak3.js  get_sf_ver.ps1  ip.js  kr.js  log.sh  nezha_v0.ps1  nezha_v0.sh  nz_v0.ps1  qTranslator.js  qiq.ps1  qiq.sh  qiqtools.sh
subfree/: main.py  subfree.bak.py
web/: dash_app.py  pyproject.toml  sub_free.js  sub_free.py  sub_url.py
web/app/: main.py
web/scripts/: sub_cf.py  sub_clashnode.py  sub_mibei.py  sub_nodefree.py  sub_openrunner.py  sub_v2rayshare.py
(+37 files in other folders)
